# rethinking

./: .gitignore  LICENSE  Makefile  README.rst  conf.py  index.rst  pyproject.toml
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: documentation_options.js
docs/notebooks/: 02_small_and_large_worlds.html  02_small_and_large_worlds.ipynb  03.html  03.ipynb  05_the_many_variables_and_the_spurious_waffles.html  06_the_haunted_dag_and_the_causal_terror.html  07_ulysse_s_copmpass.html  08_conditional_manatees.html  09_markov_chain_monte_carlo.html  10_big_entropy_and_the_generalized_linear_model.html  11_god_spiked_the_integers.html  12_monsters_and_mixtures.html  13_models_with_memory.html
notebooks/: 02_small_and_large_worlds.ipynb  02_small_and_large_worlds.md  03_sampling_the_imaginary.md  04_geocentric_models.md  05_the_many_variables_and_the_spurious_waffles.md  06_the_haunted_dag_and_the_causal_terror.md  07_ulysse_s_copmpass.md  08_conditional_manatees.md  09_markov_chain_monte_carlo.md  10_big_entropy_and_the_generalized_linear_model.md  11_god_spiked_the_integers.md  12_monsters_and_mixtures.md  13_models_with_memory.md
