[tool.poetry]
name = "rethinking"
version = "0.1.0"
description = "Statistical Rethinking"
authors = ["Ludovic Tiako <ludovic.tiako@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arviz = "^0.12.0"
black = {version = "^22.1.0", extras = ["jupyter"]}
funsor = "^0.4.3"
insipid-sphinx-theme = "^0.2.9"
jupyter = "^1.0.0"
numpyro = "^0.9.1"
plotly = "^5.6.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupytext = "^1.14.1"
nbsphinx = "^0.8.8"
isort = "^5.10.1"
pandas = "^1.4.1"
Sphinx = "^4.5.0"
sphinx-copybutton = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
