[tool.poetry]
name = "rethinking"
version = "0.1.0"
description = "Statistical Rethinking"
authors = ["Ludovic Tiako <ludovic.tiako@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # upper bound for pytensor
# funsor = "^0.4.3"
arviz = ">=0.18"
black = {version = "^24.0", extras = ["jupyter"]}
insipid-sphinx-theme = ">=0.4.0"
ipywidgets = ">=8.1.3"
isort = ">=5.13.2"
jupyter-black = ">=0.3.4"
jupyterlab = ">=4.2.1"
jupytext = ">=1.16.2"
nbsphinx = ">=0.9.4"
numpy = ">=1.26"
numpyro = ">=0.15.0"
plotly = ">=5.22.0"
pymc = ">=5.10"
sphinx = ">=7.3.7"
sphinx-copybutton = ">=0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^24.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
