[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rethinking"
description = "Statistical Rethinking (2nd Edition)"
license = "MIT"
authors = [
  { name = "Ludovic Tiako", email = "ludovic.tiako@gmail.com" },
]
version = "0.1.0"

requires-python = ">=3.10,<3.13" # upper bound for pytensor
dependencies = [
    "arviz >= 0.18",
    "black[jupyter] ~= 24.0",
    "daft >=0.1.2",
    "insipid-sphinx-theme >=0.4.0",
    "ipywidgets >=8.1.3",
    "isort >=5.13.2",
    "jupyter-black >=0.3.4",
    "jupyterlab >=4.2.1",
    "jupytext >=1.16.2",
    "nbsphinx >=0.9.4",
    "networkx >=3.3",
    "numpy >=1.26",
    "numpyro >=0.15.0",
    "plotly >=5.22.0",
    "pymc >=5.10",
    "scikit-learn >=1.5.1",
    "sphinx >=7.3.7",
    "sphinx-copybutton >=0.5.2",
    "statsmodels >=0.14.2",
]

[tool.hatch.envs.dev]
dependencies = [
    "flake8 >= 4.0.1",
    "black == 24.0",
    "pre-commit >= 2.17.0",
]

[tool.poetry]
version = "0.1.0"
package-mode = false
